...
    '1PE': 60, '2PE': 61, '1JN': 62, '2JN': 63, '3JN': 64,
    'JUD': 65, 'REV': 66,
  };

  /// Nombres en español para mostrar.
  static const _bookNames = <String, String>{
    'GEN': 'Génesis', 'EXO': 'Éxodo', 'LEV': 'Levítico',
    'NUM': 'Números', 'DEU': 'Deuteronomio', 'JOS': 'Josué',
    'JDG': 'Jueces', 'RUT': 'Rut', '1SA': '1 Samuel',
    '2SA': '2 Samuel', '1KI': '1 Reyes', '2KI': '2 Reyes',
    '1CH': '1 Crónicas', '2CH': '2 Crónicas', 'EZR': 'Esdras',
    'NEH': 'Nehemías', 'EST': 'Ester', 'JOB': 'Job',
    'PSA': 'Salmos', 'PRO': 'Proverbios', 'ECC': 'Eclesiastés',
...
